...
    super.dispose();
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: Key('recipe_screen'),
      appBar: AppBar(
        title: Text('Select Date'),
        centerTitle: false,
      ),
      body: Column(
        crossAxisAlignment: CrossAxisAlignment.start,
...

                    toggleLoader();
                  });
                },
                text: 'Show Recipes',
                isLoading: isLoading,
                widgetKey: 'show_recipe_button',
              ),
              30.verticalSpace,
              Text(
                'Recipes',
                style: context.textTheme.bodyMedium,
              ),
...
